fixed minor layout issues

--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ img{
 .description-box>div{
     padding: 1rem 1rem 0rem 2rem;
     font-family: 'Arvo', serif;
-    font-size: xxx-large;
+    font-size: 2.5rem;
     padding-top: 10%;
     
 }
@@ -97,18 +97,14 @@ button,input{
 }
 
 .login{
-    margin-top: 2em;
     grid-row-start: 5;
     font-family: 'Alata', sans-serif;
-    font-size: larger;
-}
-
-div.login>div{
-    align-self: flex-start;
+    font-size: 1em;
+    width: max-content;
 }
 
 input{
-    width: 20vw;;
+    width: 20vw;
     height: 4vh;
     border: 1px solid black;
 }
